syntax = "proto3";

package proto;

option go_package = "forum/protos/go/userpb";

// Существующий сервис auth
service AuthService {
  rpc GetUserName(UserRequest) returns (UserResponse);
}

// Новый сервис для backend
service BackendService {
  rpc GetUserComments(UserCommentsRequest) returns (UserCommentsResponse);
}

// Существующие сообщения
message UserRequest {
  int32 user_id = 1;
}

message UserResponse {
  string user_name = 1;
}

// Новые сообщения для статистики комментариев
message UserCommentsRequest {
  int32 user_id = 1;
}

message Comment {
  int32 id = 1;
  string content = 2;
  int32 topic_id = 3;
  string created_at = 4;
}

message UserCommentsResponse {
  repeated Comment comments = 1;
}